<resources>
    <string name="app_name">Kirana</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Home blank fragment</string>
    <string name="login_header_title">LOG IN WITH YOUR KIRANA ACCOUNT</string>
    <string name="hint_email">name@example.com</string>
    <string name="hint_password">Password</string>
    <string name="hint_mobile">Mobile</string>
    <string name="login">LOG IN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="register">REGISTER</string>
    <string name="empty_email_error_message">Email cannot be blank</string>
    <string name="invalid_email_error_message">Please Enter a valid email address</string>
    <string name="empty_password_error_message">Password cannot be empty</string>
    <string name="empty_first_name_error_message">First Name cannot be blank</string>
    <string name="empty_surname_error_message">Surname cannot be blank</string>
    <string name="empty_mobile_error_message">Mobile number cannot be blank</string>
    <string name="login_failure">Login failed</string>
    <string name="register_failure">Register failed</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="KEY_FIRST_NAME">1</string>
    <string name="KEY_LAST_NAME">2</string>
    <string name="KEY_EMAIL">3</string>
    <string name="KEY_MOBILE">4</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="order_receipt">Order receipt</string>
    <string name="close">CLOSE</string>
    <string name="place_order">Place Order</string>
    <string name="otp_header_title">ENTER YOUR OTP</string>
    <string name="submit">SUBMIT</string>
    <string name="resend">Resend OTP</string>
    <string name="otp">OTP</string>

</resources>
